Support batch processing of ELF files with coderec and optimize ZIP archive import
- Add parseMultiple method to CoderecParser to handle batch invocation of coderec on multiple ELF files
- Refactor coderec invocation to run as a single process for batches, parse concatenated JSON results, and map them back to each ELF input
- Improve CoderecParser with helper methods to split and parse JSON blobs, and extract CodeRegion lists per file
- Modify FileAnalysisService.importZipArchive to extract ELF files to a temp directory, run batch coderec once, then import files with deduplication by SHA-256
- Add cleanup method to remove temporary extraction directory after import
- Refactor ElfWrapper to support creation from MultipartFile with or without pre-parsed CodeRegion list
- Switch to using ElfWrapper.of factory method instead of constructor to unify creation patterns
- Add logging and improve error handling during coderec execution and batch processing
- Fix minor code style and imports for clarity and robustness